--- a/index.html
+++ b/index.html
@@ -8,39 +8,108 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <!-- CSS only -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
     <title>M. Mertkaan Erdem's Menu</title>
   </head>
   <body>
-    <header>
-      <h1>Our Menu</h1>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-0">
+      <a id="top" class="navbar-brand food" href="#">Food, LLC</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbar_icerik"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <section class="chicken">
-      <h2>Chicken</h2>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book.
-      </p>
-    </section>
-    <section class="beef">
-      <h2>Beef</h2>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book.
-      </p>
-    </section>
-    <section class="sushi">
-      <h2>Sushi</h2>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book.
-      </p>
-    </section>
+      <div class="collapse navbar-collapse" id="navbar_icerik">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Anasayfa <span class="sr-only">(current)</span></a
+            >
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Chicken</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Beef</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sushi</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div>
+      <h1 class="text-center">Our Menu</h1>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <section class="chicken">
+            <h2>Chicken</h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. <br />
+              <a href="#top">Back To Top</a>
+            </p>
+          </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <section class="beef">
+            <h2>Beef</h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. <br />
+              <a href="#top">Back To Top</a>
+            </p>
+          </section>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <section class="sushi">
+            <h2>Sushi</h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. <br />
+              <a href="#top">Back To Top</a>
+            </p>
+          </section>
+        </div>
+      </div>
+    </div>
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
